--- a/front/src/index.html
+++ b/front/src/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
-  <title>AngularComicsbooks</title>
+  <title>Comicsbooks</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
